--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "https://github.com/VadimZaets/goit-react-hw-01-components",
+{ "homepage": "https://VadimZaets.github.io/goit-react-hw-01-components",
   "name": "goit-react-hw-01-components",
   "version": "0.1.0",
   "private": true,
